Incluídas as classes e configurações necessárias para realizar a autenticação.

--- a/inspira-backend.Infra/inspira-backend.Infra.csproj
+++ b/inspira-backend.Infra/inspira-backend.Infra.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\inspira-backend.Application\inspira-backend.Application.csproj" />
     <ProjectReference Include="..\inspira-backend.Domain\inspira-backend.Domain.csproj" />
   </ItemGroup>
 
