--- a/inspira-backend.Api/appsettings.json
+++ b/inspira-backend.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "SUA_CHAVE_SECRETA_MUITO_LONGA_E_SEGURA_AQUI_MUDE_ISSO",
+    "Issuer": "InspiraAPI",
+    "Audience": "InspiraApp",
+    "ExpiryMinutes": 60
+  }
 }
