--- a/inspira-backend.Application/inspira-backend.Application.csproj
+++ b/inspira-backend.Application/inspira-backend.Application.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\inspira-backend.Domain\inspira-backend.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
