Configuração e para usar o cloudinary para não precisar buscar blobs nas requisições de obras de arte (posts).

--- a/inspira-backend.Api/appsettings.json
+++ b/inspira-backend.Api/appsettings.json
@@ -7,9 +7,14 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Secret": "SUA_CHAVE_SECRETA_MUITO_LONGA_E_SEGURA_AQUI_MUDE_ISSO",
-    "Issuer": "InspiraAPI",
-    "Audience": "InspiraApp",
+    "Secret": "",
+    "Issuer": "",
+    "Audience": "",
     "ExpiryMinutes": 60
+  },
+  "CloudinarySettings": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
   }
 }
