--- a/.github/workflows/master_inspira-backend.yml
+++ b/.github/workflows/master_inspira-backend.yml
@@ -25,13 +25,13 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Restore dependencies
-        run: dotnet restore inspira-backend.API/inspira-backend.API.csproj
+        run: dotnet restore inspira-backend.Api/inspira-backend.Api.csproj
 
       - name: Build
-        run: dotnet build inspira-backend.API/inspira-backend.API.csproj --configuration Release --no-restore
+        run: dotnet build inspira-backend.Api/inspira-backend.Api.csproj --configuration Release --no-restore
 
       - name: Publish
-        run: dotnet publish inspira-backend.API/inspira-backend.API.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp --no-build
+        run: dotnet publish inspira-backend.Api/inspira-backend.Api.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp --no-build
 
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
