--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -38,7 +38,18 @@ jobs:
             /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
             /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.verbose=true \
-            /d:sonar.cs.opencover.reportsPaths="**/*.opencover.xml"
+            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
+
+      - name: Show current directory
+        run: |
+          echo "📂 Diretório atual:"
+          pwd
+          ls -la
+
+      - name: List solution files
+        run: |
+          echo "🔍 Listando arquivos .sln encontrados:"
+          find . -name "*.sln"
 
       - name: Restore dependencies
         run: dotnet restore inspira-backend.sln
@@ -52,7 +63,14 @@ jobs:
             --configuration Release \
             /p:CollectCoverage=true \
             /p:CoverletOutputFormat=opencover \
-            /p:CoverletOutput="./TestResults/Coverage/"
-            
+            /p:CoverletOutput=./TestResults/coverage.opencover.xml \
+            /p:Include="[Inspira.API]*"
+
+      - name: Upload coverage result as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: ./TestResults/coverage.opencover.xml
+
       - name: End SonarCloud Analysis
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
