--- a/Inspira.Trainer/appsettings.json
+++ b/Inspira.Trainer/appsettings.json
@@ -1,21 +1,22 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=InspiraDB;Username=inspira_user;Password=inspira_password"
+    "DefaultConnection": "Host=Hostname;Port=Port;Database=DATABASE;Username=USER;Password=PASS"
   },
   "Serilog": {
-    "MinimumLevel": "Information",
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Microsoft.Azure.Functions.Worker": "Warning"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "logs/trainer-log-.txt",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 7
-        }
       }
-    ]
-  }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  },
+  "AllowedHosts": "*"
 }
