--- a/Inspira.Trainer/Inspira.Trainer.csproj
+++ b/Inspira.Trainer/Inspira.Trainer.csproj
@@ -10,6 +10,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Include="host.json" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.4" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.23.0" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.3.1" />
