--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -36,7 +36,7 @@ jobs:
           dotnet sonarscanner begin \
             /k:"Math-GSilva_Inspira-Backend" \
             /o:"math-gsilva" \
-            /d:sonar.token  ="${{ secrets.SONAR_TOKEN }}" \
+            /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
             /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.verbose=true \
             /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
@@ -70,4 +70,4 @@ jobs:
           path: '**/coverage.opencover.xml'
 
       - name: End SonarCloud Analysis
-        run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+        run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
