--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -40,6 +40,7 @@ jobs:
             /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.verbose=true \
             /d:sonar.cs.opencover.reportsPaths="**/coverage.cobertura.xml" \
+            /d:sonar.cs.vstest.reportsPaths="**/test_results.trx" \
             /d:sonar.coverage.exclusions="**/DTOs/**,**/Entities/**,**/Migrations/**,**/Program.cs,**/InspiraDbContext.cs,**/Inspira.Trainer/**,**/CloudinaryWrapper.cs"
       
       - name: Restore dependencies
@@ -53,7 +54,7 @@ jobs:
           dotnet test inspira-backend.sln \
             --configuration Release \
             --no-build \
-            --verbosity normal \
+            --logger "trx;LogFileName=test_results.trx" \
             --collect:"XPlat Code Coverage" \
             --results-directory ./TestResults
 
