Added Logging to appliaction Insights

--- a/inspira-backend.Api/appsettings.json
+++ b/inspira-backend.Api/appsettings.json
@@ -1,11 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.ApplicationInsights" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "ApplicationInsights",
+        "Args": {
+          "connectionString": "ApplicationInsights_Connection",
+          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "InspiraDbConnection": "Your_ConnectionString"
+  },
   "JwtSettings": {
     "Secret": "",
     "Issuer": "",
